@@ -11,13 +11,13 @@ from emby.api.authentication import Authentication
 from lib.utils import Url
 
 class Authenticator:
-    def __init__(self, url, deviceId='', userId='', username='', password=''):
+    def __init__(self, url, deviceId='', userId='', username='', password='', token=''):
         self._url = url
         self._deviceId = deviceId
         self._userId = userId
         self._username = username
         self._password = password
-        self._accessToken = str()
+        self._accessToken = token or str()
 
         if not self._url:
             raise ValueError('url must not be empty')
@@ -30,15 +30,15 @@ class Authenticator:
             raise ValueError('Either userId or username must not be empty')
 
     @staticmethod
-    def WithUserId(url, deviceId, userId, password=''):
-        return Authenticator(url, deviceId, userId=userId, password=password)
+    def WithUserId(url, deviceId, userId, password='', token=''):
+        return Authenticator(url, deviceId, userId=userId, password=password, token=token)
 
     @staticmethod
-    def WithUsername(url, deviceId, username, password=''):
-        return Authenticator(url, deviceId, username=username, password=password)
+    def WithUsername(url, deviceId, username, password='', token=''):
+        return Authenticator(url, deviceId, username=username, password=password, token=token)
 
-    def Authenticate(self):
-        if self.IsAuthenticated():
+    def Authenticate(self, force=False):
+        if not force and self.IsAuthenticated():
             return True
 
         (result, accessToken, userId) = \
