@@ -183,6 +183,7 @@ SETTING_PROVIDER_USER_OPTION_MANUAL = 'manual'
 SETTING_PROVIDER_USERNAME = 'emby.username'
 SETTING_PROVIDER_PASSWORD = 'emby.password'
 SETTING_PROVIDER_TEST_AUTHENTICATION = 'emby.testauthentication'
+SETTING_PROVIDER_TOKEN = 'emby.token'
 SETTING_PROVIDER_DEVICEID = 'emby.deviceid'
 
 SETTING_PROVIDER_PLAYBACK_ALLOW_DIRECT_PLAY = 'emby.allowdirectplay'
